# backend.ai-agent

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  HISTORY.md  MANIFEST-wheel.in  MANIFEST.in  README.k8s.md  README.md  README.rst  codecov.yml  dev-requirements.txt  docker-compose.yml  install-halfstack.sh  install-k8s-halfstack.sh  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  run-ci-tests.sh  setup.cfg  setup.py
.github/workflows/: default.yml  lint-flake8.yml  pr.yml  typecheck-mypy.yml
ai/backend/agent/: accelerator.py  files.py  gpu.py  kernel.py  resources.py  server.py  stats.py  utils.py  version.py
changes/: 0.feature  0.fix  142.fix  161.feature  162.feature  165.feature  167.feature  186.fix  189.deprecation  189.feature  189.fix  189.misc  190.feature  196.misc  197.fix  198.feature  199.fix  200.fix  202.fix  203.fix  204.fix  205.fix  206.fix  207.fix  208.fix  209.fix  210.fix  212.fix  213.fix  214.fix  217.fix  218.feature  218.fix  219.feature  220.fix  221.fix  222.breaking  222.fix  223.fix  224.feature  (+78 more)
config/: ci.toml  halfstack.k8s.toml  halfstack.toml  sample.k8s.toml  sample.toml
docker/: env.ubuntu1604.dockerfile
kube-yamls/: create-efs-pv.yml.template  docker-registry-cert-cm.yml.certificate  docker-registry.yml  image-pull-secrets.yml.template
requirements/: lint.txt
scripts/: build-dropbear.sh  build-sftpserver.sh  build-suexec.sh  build-tmux.sh  clean_containers.sh  run-with-halfstack.sh
scripts/ci/: install-manager.sh  overwrite-python.sh  run-manager.sh
scripts/deploy-static/: deploy_static_files.py
scripts/private-registry/: docker-compose.yml  push_certificate.py
sorna/: agent.py
sorna/agent/: __init__.py  files.py  gpu.py  helper.py  kernel.py  resources.py  server.py  stats.py  tests.py  version.py
src/ai/backend/agent/: __init__.py  accelerator.py  agent.py  config.py  defs.py  exception.py  files.py  fs.py  gpu.py  intrinsic.py  k8sapi.py  k8sconfs.py  kernel.py  proxy.py  resources.py  server.py  stats.py  types.py  utils.py  watcher.py
src/ai/backend/agent/cli/: config.py  images.py
src/ai/backend/agent/docker/: agent.py  files.py  intrinsic.py  kernel.py  resources.py  server.py  utils.py  watcher.py
src/ai/backend/agent/k8s/: agent.py  intrinsic.py  k8sapi.py  kernel.py  resources.py
src/ai/backend/agent/k8s/cli/: config.py  images.py
src/ai/backend/agent/kubernetes/: agent.py  intrinsic.py  kernel.py  kube_object.py  utils.py
src/ai/backend/agent/test/: delete_kernel.py  start_kernel.py
src/ai/backend/kernel/: __init__.py  __main__.py  base.py  compat.py  intrinsic.py  jupyter_client.py  service.py  service_actions.py  terminal.py  utils.py
src/ai/backend/kernel/c/: __init__.py
src/ai/backend/kernel/cpp/: __init__.py
src/ai/backend/kernel/git/: __init__.py
src/ai/backend/kernel/golang/: __init__.py
src/ai/backend/kernel/haskell/: __init__.py
src/ai/backend/kernel/java/: __init__.py
src/ai/backend/kernel/julia/: __init__.py
src/ai/backend/kernel/lua/: __init__.py
src/ai/backend/kernel/nodejs/: __init__.py
src/ai/backend/kernel/octave/: __init__.py
src/ai/backend/kernel/php/: __init__.py
src/ai/backend/kernel/python/: __init__.py  sitecustomize.py
src/ai/backend/kernel/r/: __init__.py
src/ai/backend/kernel/rust/: __init__.py
src/ai/backend/kernel/scheme/: __init__.py
src/ai/backend/runner/: .bashrc  .tmux.conf  build-suexec.sh  entrypoint.sh  env.alpine3.8.dockerfile  env.centos7.dockerfile  env.ubuntu16.04.dockerfile  extract_dotfiles.py  jupyter-custom.css  krunner-env.alpine3.8.dockerfile  krunner-env.alpine3.8.x86_64.tar.xz  krunner-env.centos7.6.dockerfile  krunner-env.centos7.6.x86_64.tar.xz  krunner-env.ubuntu16.04.dockerfile  krunner-env.ubuntu16.04.x86_64.tar.xz  krunner-python.alpine3.8.dockerfile  krunner-python.centos7.6.dockerfile  python36.alpine3.8.dockerfile  python36.centos7.dockerfile  python36.ubuntu16.04.dockerfile  requirements.txt
tests/: conftest.py  test_agent.py  test_alloc_map.py  test_files.py  test_gpu.py  test_helper.py  test_kernel.py  test_resources.py  test_server.py  test_stats.py  test_utils.py  tests.py
tests/docker/: test_agent.py
