[metadata]
name = backend.ai-agent
version = attr: ai.backend.agent.__version__
description = Backend.AI Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-agent
    Tracker = https://github.com/lablup/backend.ai-agent/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=41.0.1
install_requires =
    ConfigArgParse==0.12
    Click>=7.0
    dataclasses; python_version<"3.7"
    aiodocker>=0.14.0
    aiozmq>=0.7
    aiofiles~=0.4.0
    aiojobs>=0.2.2
    aiohttp~=3.5.0
    aioredis~=1.2.0
    aiobotocore>=0.3.0
    aiotools>=0.8.2
    async_timeout~=3.0
    attrs>=18.0  # to avoid pip 10 resolver issue
    psutil~=5.4.0
    python-snappy~=0.5.1
    pyzmq==18.1.0
    requests
    requests_unixsocket
    trafaret>=1.0
    uvloop~=0.12.0
    setproctitle~=1.1.10
    netifaces~=0.10.0
    backend.ai-common>=19.09.0b7,<19.10.0
    backend.ai-krunner-alpine
    backend.ai-krunner-centos
    backend.ai-krunner-ubuntu
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.4
    twine>=1.13.0
test =
    pytest>=5.0.1
    pytest-asyncio>=0.10.0
    pytest-cov
    pytest-mock
    asynctest
    flake8>=3.7.0
    codecov
dev =
    pytest-sugar
ci =
monitor =
    backend.ai-stats-monitor
    backend.ai-error-monitor

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions
