[metadata]
name = backend.ai-agent
version = attr: ai.backend.agent.__version__
description = Backend.AI Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-agent
    Tracker = https://github.com/lablup/backend.ai-agent/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
setup_requires =
    setuptools>=41.2.0
install_requires =
    Click>=8.0.1
    aiodocker>=0.21.0
    aiofiles~=0.7.0
    aiohttp~=3.7.4
    aiojobs>=0.2.2
    aiomonitor~=0.4.5
    aioredis~=1.3.1
    aiotools~=1.2.2
    async_timeout~=3.0
    attrs~=21.2
    cachetools~=4.1.1
    callosum~=0.9.7
    netifaces~=0.11.0
    psutil~=5.8.0
    python-snappy~=0.6.0
    pyzmq~=22.1.0
    setproctitle~=1.2.1
    trafaret~=2.1
    typing-extensions>=3.10.0
    uvloop~=0.15.2
    backend.ai-common~=21.9.0.dev0
    backend.ai-cli~=0.5.0
    backend.ai-krunner-alpine~=3.3
    backend.ai-krunner-static-gnu>=2.0.0.dev2,<3.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.34.2
    twine>=3.4.2
    towncrier~=21.3.0
test =
    pytest~=6.2.4
    pytest-asyncio>=0.14.0
    pytest-cov
    pytest-mock>=3.1.0
    asynctest>=0.13.0
    aioresponses~=0.7.1
    codecov
dev =
lint =
    flake8>=3.9.2
typecheck =
    mypy>=0.910
    types-aiofiles
    types-click
    types-cachetools
    types-pkg_resources
    types-six
datadog =
    backend.ai-monitor-datadog~=0.2.1
sentry =
    backend.ai-monitor-sentry~=0.2.1
cuda =
    backend.ai-accelerator-cuda~=2.2.0

[options.entry_points]
backendai_cli_v10 =
    ag = ai.backend.agent.cli:main
    ag.start-server  = ai.backend.agent.server:main
    ag.start-watcher = ai.backend.agent.watcher:main

[options.packages.find]
where = src
include = ai.backend.*

[options.package_data]
ai.backend.agent = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true
